--- a/build.yaml
+++ b/build.yaml
@@ -27,5 +27,7 @@ include:
     shield: lily58_right
   - board: nice_nano_v2
     shield: corne_left
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2
     shield: corne_right
