--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,4 +1,7 @@
+# Enable display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_INVERT=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
 
 # Uncomment the following line to enable deep sleep
 # CONFIG_ZMK_SLEEP=y
@@ -14,5 +17,6 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 
-# Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
-# CONFIG_ZMK_USB_LOGGING=y
+# Enable peripheral battery monitoring
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
